# korean-legal-document-parser

./: .gitignore  GENERAL_DOCS_PAGE_VALIDATION.md  PAGE_VALIDATION_REPORT.md  PAGE_VALIDATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt  test_chunking_with_pages.py  test_general_docs_chunking.py  test_markdown_chunking.py  test_page_validation.py  validate_general_docs.py  validate_page_test.py
docs/: LegalDocumentProcessor.md
korean_legal_document_parser/: __init__.py  cli.py  storage.py  types.py
src/chunking/: LegalDocumentProcessor.py
tests/: test_public_api.py
